# tvidentify

./: .gitignore  README.md  batch_identifier.py  episode_identifier.py  file_renamer.py  imagemaker.py  pyproject.toml  requirements.txt  subtitle_extractor.py
.github/workflows/: wheels.yml
src/tvidentify/: batch_identifier.py  episode_identifier.py  subtitle_extractor.py  utils.py
tests/: __init__.py  conftest.py  generate_fixtures.py  test_cli_integration.py  test_episode_identification.py  test_file_discovery.py  test_file_renaming.py  test_integration.py  test_subtitle_extraction.py  test_utilities.py
tests/fixtures/: test_subtitle.sup
