[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tvidentify"
version = "0.1.0"
description = "A tool to identify TV episodes from video files and rename them to match Plex naming conventions."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
  "opencv-python-headless",
  "pytesseract",
  "openai",
  "google-genai"
]

[project.scripts]
# This creates a command 'tvidentify' that runs the 'main' function in batch_identifier.py
tvidentify = "tvidentify.batch_identifier:main"

[tool.setuptools.packages.find]
where = ["src"]  # Remove this block if you aren't using the src/ layout
