[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tvidentify"
version = "0.1.0"
description = "A tool to identify TV episodes from video files and rename them to match Plex naming conventions."
keywords = ["tv", "episode", "identifier", "plex", "renamer", "subtitle", "ocr"]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
  "opencv-python-headless",
  "pytesseract",
  "openai",
  "google-genai"
]

[project.urls]
"Homepage" = "https://github.com/ram-nat/tvidentify/"
"Repository" = "https://github.com/ram-nat/tvidentify.git"

[project.scripts]
# This creates a command 'tvidentify' that runs the 'main' function in batch_identifier.py
tvidentify = "tvidentify.batch_identifier:main"

[tool.setuptools.packages.find]
where = ["src"]
